# CaracalDB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  conftest.py  hatch.toml  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  docs.yml  release.yml
bench/: __init__.py  harness.py
bench/results/: baseline.json  latest.json
caracaldb/: __init__.py  _version.py  api.py  engine.py  vector.py
caracaldb/cli/: __init__.py  __main__.py  app.py
caracaldb/exec/: __init__.py  as_of.py  expr.py  operator.py
caracaldb/feature/: __init__.py  online.py
caracaldb/graph/: __init__.py  csc_builder.py  csr_builder.py  csr_format.py  csr_reader.py  hnsw.py
caracaldb/ingest/: __init__.py  parquet_loader.py  rdf_import.py
caracaldb/lang/: __init__.py  diagnostics.py  proc.py
caracaldb/ml/: __init__.py  dgl_adapter.py  jraph_adapter.py  loader.py  lynxes_adapter.py  pyg_adapter.py  subgraph.py
caracaldb/observability/: __init__.py  explain.py  profile.py  tracing.py
caracaldb/onto/: __init__.py  catalog.py  closure.py  hierarchy.py  reasoner.py
caracaldb/plan/: __init__.py  cost.py  logical.py  pattern_compiler.py  rules.py  with_pipeline.py
caracaldb/planner/: __init__.py  rust_lowering.py
caracaldb/query/: __init__.py  compiler.py
caracaldb/schema/: __init__.py
caracaldb/storage/: __init__.py  buffer_pool.py  bundle.py  checkpoint.py  column_store.py  dict_store.py  diff.py  edge_store.py  header.py  manifest.py  mvcc.py  node_store.py  pack.py  recovery.py  snapshot.py  wal.py
caracaldb/tx/: __init__.py  manager.py
caracaldb/udf/: __init__.py  py_udf.py  tuft_udf.py
caracaldb/viewer/: __init__.py  server.py
crates/caracaldb-core/: Cargo.toml
crates/caracaldb-core/src/: bundle.rs  checkpoint.rs  column.rs  error.rs  exec.rs  graph.rs  header.rs  ir.rs  lib.rs  parser.rs  storage.rs  tx.rs  wal.rs
crates/caracaldb-python/: Cargo.toml
crates/caracaldb-python/src/: bundle.rs  column.rs  error.rs  exec.rs  graph.rs  lib.rs  storage.rs
docs/: CONTRIBUTING.md  README.md  mkdocs.yml
docs/adr/: 0001-arrow-native-storage.md  0002-tuple-ir-for-expressions.md  0003-snapshot-as-lsn-window.md  0004-defer-user-docs-to-v020.md  0005-rdf-as-import-only.md
docs/api/: README.md  caracaldb.md  exec.md  extensions.md  feature.md  graph.md  io.md  ml.md  observability.md  onto.md  plan.md  query-engine.md  storage.md  symbols.json  tx.md  udf.md
docs/concepts/: data-model.md  lynxes-and-graphframe.md  ml-integration.md  ontology.md  overview.md  snapshots-and-mvcc.md  storage-layout.md  tuft-vs-cypher-vs-sparql.md
docs/developers/: README.md  architecture.md  benchmarks.md  contributing.md  error-policy.md  examples.md  milestones.md  observability-internals.md  rust-port-roadmap.md  testing-strategy.md  tests.md
docs/errors/: README.md  index.md
docs/format/: README.md  catalog-fb.md  column-segment.md  crcl-bundle.md  csr-csc.md  manifest.md  wal.md
docs/guides/: README.md  aggregations-and-topk.md  benchmark-and-regression.md  build-csr-and-csc.md  export-subgraph.md  feature-store.md  ingest-parquet.md  knn-with-hnsw.md  neighbor-loader-pyg.md  observability-explain-profile.md  ontology-reasoning.md  packaging-and-cli.md  pattern-queries.md  procedures.md  snapshots-as-of.md  transactions.md  udfs-tuft-and-python.md
docs/interop/: README.md  jraph-and-jax.md  lynxes-graphframe.md  neo4j-bolt-bridge.md  neo4j-migration.md  pyg-and-dgl.md  pyg.md
docs/release/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.2.0.md  (+17 more)
examples/: biomed.ipynb  fraud.ipynb  generate_dbs.py  graphrag_substrate.py  recsys.ipynb
schema/: catalog.fbs
tests/: test_api_mvp.py  test_bootstrap.py  test_connect_packed.py  test_examples_smoke.py  test_graph_ecosystem_api.py  test_pattern_pipeline.py  test_release_smoke.py  test_rust_engine_scaffold.py  test_rust_plan_boundary.py
tools/: check_dist_archives.py  check_docs_code_blocks.py  check_docs_metadata.py  check_error_pages.py  check_public_api_examples.py  check_quickstart_code.py  gen_builtins.py  gen_errors.py  gen_milestones.py  gen_symbol_index.py  gen_tuft_grammar.py
(+148 files in other folders)
