[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "caracaldb"
dynamic = ["version"]
description = "Embedded, ontology-leaning, Arrow-native analytical GraphDB for KG and GNN MLOps workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "CaracalDB contributors" },
]
keywords = [
  "arrow",
  "database",
  "embedded-database",
  "gnn",
  "graph",
  "knowledge-graph",
  "mlops",
  "ontology",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "flatbuffers>=24.3",
  "hnswlib>=0.8",
  "lark>=1.1",
  "numpy>=1.26",
  "pathlib>=1.0.1",
  "pyarrow>=15",
  "pyroaring>=0.4",
  "rich>=13",
  "typer>=0.12",
  "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "hatch>=1.12",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
  "ruff>=0.5",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-include-markdown-plugin>=6.2",
  "mkdocs-material>=9.5",
  "mkdocs-section-index>=0.3",
  "mkdocstrings[python]>=0.27",
]
io = [
  "lz4>=4.3",
  "zstandard>=0.22",
]
ml = [
  "numba>=0.59",
]

[project.urls]
Documentation = "https://caracaldb.dev"
Repository = "https://github.com/eastl/LightGraphDB"

[project.scripts]
caracal = "caracaldb.cli:main"

[tool.hatch.version]
path = "caracaldb/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/bench",
  "/caracaldb",
  "/docs",
  "/examples",
  "/schema",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["caracaldb"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The viewer module embeds an HTML/CSS/JS template as a string literal;
# wrapping those long lines hurts readability without improving anything.
"caracaldb/viewer/server.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["caracaldb"]

[[tool.mypy.overrides]]
module = ["lark", "lark.*"]
ignore_missing_imports = true
