[package]
name = "caracaldb-core"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array = "57"
arrow-ipc = "57"
arrow-schema = "57"
arrow-select = "57"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crc32fast = "1.4"
lz4_flex = "0.12"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zstd = "0.13"
