[package]
name = "caracaldb-python"
version = "1.0.2"
description = "PyO3 bindings for the CaracalDB Rust core."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_caracaldb_rust"
crate-type = ["cdylib"]
test = false

[dependencies]
caracaldb-core = { path = "../caracaldb-core" }
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module", "generate-import-lib"] }
serde_json = "1"
